horizontal scroll fix

--- a/src/components/Logbook/Logbook.module.scss
+++ b/src/components/Logbook/Logbook.module.scss
@@ -5,8 +5,8 @@
   //justify-content: center;
   height: 100vh;
   min-height: 435px;
-  padding: 0 25px 0 0;
-  width: 100vw;
+  //padding: 0 25px 0 0;
+  //width: calc(100vw - 20px * 2);
   //min-width: fit-content;
 }
 
